Fixed alignment issue on the mockup images, added link to projects and change the link color

--- a/css/resume.css
+++ b/css/resume.css
@@ -172,7 +172,7 @@ a {
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #2a6ec3;
 }
 
 #projects img {
